--- a/website/package.json
+++ b/website/package.json
@@ -16,7 +16,9 @@
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router": "^7.8.1",
-    "tailwindcss": "^4.1.12"
+    "react-toastify": "^11.0.5",
+    "tailwindcss": "^4.1.12",
+    "toastify": "^2.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
