--- a/website/package.json
+++ b/website/package.json
@@ -15,7 +15,9 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-router": "^7.8.1",
+    "react-syntax-highlighter": "^15.6.6",
     "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.12",
     "toastify": "^2.0.1"
